--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ terus melangkah maju sampai kamu menemukan bukti yang kamu mau. Terima kasih sud
         </p>
         <div class="photos">
             <img src="foto1.jpg" alt="Foto bersama 1">
-            <img src="foto2.jpg" alt="Foto bersama 2">
+            <img src="Foto22.jpg" alt="Foto bersama 2">
             <img src="foto3.jpg" alt="Foto bersama 3">
         </div>
         <p>
